[package]
name = "http-ip"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2024"
rust-version = "1.85.0"
description = "Utilities to determine HTTP client IP"
readme = "README.md"
repository = "https://github.com/DoumanAsh/http-ip"
license = "BSL-1.0"
keywords = ["http", "ip"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
ip-cidr = "0.1"

[dependencies.http]
version = "1"
#default-features = false
optional = true

[features]
http = ["dep:http"]

[[test]]
name = "http"
required-features = ["http"]

[package.metadata.docs.rs]
features = ["http"]
